k8s/portofolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portofolio-service  # Nama Service
spec:
  selector:
    app: portofolio  # Label yang sesuai dengan label pada pod yang ingin dijadikan target Service
  ports:
    - protocol: TCP
      port: 443
      targetPort: 3000  # Anggaplah aplikasi React berjalan pada port 3000
